# gielda_dyzurowa_ICP

./: .gitignore  Dockerfile  README.md  Readme.md  again.sh  build_and_run.sh  copilot_session.txt  copilot_session2.txt  entrypoint.sh  from_backend.json  test.sh
d/: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
d/src/d_backend/: Cargo.toml  d_backend.did
d/src/d_backend/src/: bootstrap.rs  controller.rs  jwt.rs  lib.rs  specialties.rs  types.rs
d/src/d_frontend/: README.md  generate_config.dart  mybuild.sh  package.json  pubspec.yaml
d/src/d_frontend/android/app/: build.gradle
d/src/d_frontend/integration_test/: app_test.dart  app_test2.dart  app_test3.dart
d/src/d_frontend/ios/Runner/: Info.plist
d/src/d_frontend/lib/: ICP_connector.dart  api.dart  app_bar.dart  candid_api.dart  constants.dart  counter.dart  counter_store.dart  date_time_input_field.dart  drawer.dart  duty_slots_screen.dart  get_user_data_screen.dart  login_screen.dart  login_store.dart  logout_screen.dart  main.dart  print.dart  print_helper.dart  publish_duty_slot_screen.dart  publish_duty_slot_store.dart  register_screen.dart  register_store.dart  show_usernames_screen.dart  specialty_dropdown_menu.dart  types.dart
d/src/d_frontend/linux/: CMakeLists.txt  my_application.cc
d/src/d_frontend/src/: App.js
d/src/d_frontend/test/: widget_test.dart
d/src/d_frontend/test_driver/: e2e_test_test.dart
d/src/d_frontend/web/: index.html  manifest.json
d/src/d_frontend/windows/: CMakeLists.txt
docs/: commands.txt  wallets.json
utils/keysmith/: seed.txt
(+9 files in other folders)
