[package]
name = "d_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[workspace.dependencies]
candid = "0.9.11"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-structures = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

