# This is a comment in TOML

[package]
name = "d_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
pluto = { git = "https://github.com/pu0238/pluto.git" }
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13.2"
ic-stable-structures = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

